values.yaml file modified

--- a/Newprojfordevopsaks/charts/newprojfordevopsaks/values.yaml
+++ b/Newprojfordevopsaks/charts/newprojfordevopsaks/values.yaml
@@ -4,16 +4,16 @@
 fullnameOverride: newprojfordevopsaks
 replicaCount: 1
 image:
-  repository: newprojfordevopsaks
+  repository: myuniqueregistry.azurecr.io/pulavartiaparna/devopswithazurekubernetes
   tag: stable
   pullPolicy: IfNotPresent
-imagePullSecrets: []
+imagePullSecrets: 
   # Optionally specify an array of imagePullSecrets.
   # Secrets must be manually created in the namespace.
   # ref: https://kubernetes.io/docs/concepts/containers/images/#specifying-imagepullsecrets-on-a-pod
   #
   # This uses credentials from secret "myRegistryKeySecretName".
-  # - name: myRegistryKeySecretName
+   - name: azureaks
 service:
   type: ClusterIP
   port: 80
